--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,37 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@layer base {
+  /* josefin-sans-regular - latin */
+  @font-face {
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+      url('/fonts/josefin-sans-v24-latin/josefin-sans-v24-latin-regular.woff2')
+        format('woff2'),
+      /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url('/fonts/josefin-sans-v24-latin/josefin-sans-v24-latin-regular.woff')
+        format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
+  /* josefin-sans-700 - latin */
+  @font-face {
+    font-family: 'Josefin Sans';
+    font-style: normal;
+    font-weight: 700;
+    src: local(''),
+      url('/fonts/josefin-sans-v24-latin/josefin-sans-v24-latin-700.woff2')
+        format('woff2'),
+      /* Chrome 26+, Opera 23+, Firefox 39+ */
+        url('/fonts/josefin-sans-v24-latin/josefin-sans-v24-latin-700.woff')
+        format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+  }
 
-* {
-  box-sizing: border-box;
+  html {
+    font-family: 'Josefin Sans', system-ui, sans-serif;
+    font-weight: 400;
+    font-size: 1.125rem;
+    color: hsl(0, 0%, 100%);
+  }
 }
